Test/errors/err_use_after_move_loop_nested.cb
// Loop-carried use-after-move across NESTED loops: p is moved in the inner loop, so the
// inner back-edge (and the outer one) re-reach the move with p already moved.
expect_error("use of moved variable 'p'");
struct Node { int v = default; };
void sink(move Node* n) { delete n; }
int main()
{
    Node* p = new Node;
    for (int i = 0; i < 2; i = i + 1)
    {
        for (int j = 0; j < 2; j = j + 1)
        {
            sink(p);
        }
    }
    return 0;
}
